--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,10 +1,5 @@
 name: Continuous Deploy with Github
 
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 on: [push]
 
 jobs:
@@ -25,5 +20,14 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-        
-     
+
+      - name: Setup Java JDK
+        uses: actions/setup-java@v4.0.0
+        with:
+          java-version: '21'
+          java-version-file: '21'
+          distribution: 'adopt'
+          
+      - name: Build Eureka Naming Server Container
+        working-directory: ./naming-server
+        run: mvn spring-boot:build-image -DskipTests
