--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -29,5 +29,5 @@ jobs:
           distribution: 'adopt'
           
       - name: Build Eureka Naming Server Container
-        working-directory: ../naming-server
+        working-directory: naming-server
         run: mvn spring-boot:build-image -DskipTests
