--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,7 +15,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: 'true'
-
     
       - name: Login to Docker Hub
         uses: docker/login-action@v3.0.0
@@ -32,3 +31,19 @@ jobs:
       - name: Build Eureka Naming Server Container
         working-directory: naming-server
         run: mvn spring-boot:build-image -DskipTests
+
+      - name: Build API Gateway Container
+        working-directory: api-gateway
+        run: mvn spring-boot:build-image -DskipTests
+
+      - name: Build Currency Service Container
+        working-directory: currency-service
+        run: mvn spring-boot:build-image -DskipTests
+
+      - name: Build Book Service Container
+        working-directory: book-service
+        run: mvn spring-boot:build-image -DskipTests
+
+      - name: Build Docker Compose
+        working-directory: .
+        run: docker compose build
